--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-    implementation project(':kvcache')
+    implementation project(':kvcache-android')
+//    implementation 'com.github.mazouri:kvcache:1.0'
 
 }
